--- a/style.css
+++ b/style.css
@@ -299,3 +299,13 @@ section-title::after {
   white-space: pre-wrap;
   word-break: break-all;
 }
+/*------------Experiance---------------*/
+.experiance__container {
+  row-gap: 2rem;
+  text-align: center;
+}
+.experience__data {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+}
