--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 /* colors */
 :root {
   --bg-color: #080808;
-  --accent-color: green;
+  --accent-color:#009966;
   --light-color: #fff;
   --dark-color: #000;
   --hover-color: #fc4cb5;
@@ -20,13 +20,16 @@
   --normal-font-siz: 1rem;
 }
 /* media query */
-:root {
+
   @media screen and (min-width: 768px) {
+    :root {
     --big-font-size: 3.5rem;
     --h2-font-size: 2rem;
     --normal-font-siz: 1rem;
   }
-}
+  }
+
+
 
 /* margins */
 :root {
@@ -77,22 +80,22 @@ img {
 .section-title {
   position: relative;
   font-size: var(--h2-font-size);
-  color: var(--dark-color);
+  color: #660066;
   margin-top: var(--mb-2);
-  margin-bottom: var(--mb-4);
+  margin-bottom: var(--mb-2);
   text-align: center;
 }
 
-section-title::after {
+.section-title::after {
   position: absolute;
   content: '';
-  width: 64px;
+  width: 65px;
   height: 0.18rem;
   left: 0;
   right: 0;
   top: 2rem;
   margin: auto;
-  background-color: blueviolet;
+  background-color:#fc4cb5;
 }
 
 .section {
@@ -101,44 +104,55 @@ section-title::after {
 
 /*---------- LAYOUT---------- */
 .bd-grid {
-  max-width: 1024px;
+  max-width: 100vw;
   display: grid;
   grid-template-columns: 100%;
   grid-column-gap: 2rem;
-  width: calc(100%-2rem);
-  margin-right: var(--mb-2);
-  margin-left: var(--mb-2);
+  width:calc(100% - 2rem);
+  margin-right: var(--mb-3);
+  margin-left: var(--mb-3);
 }
 .header {
   width: 100%;
   position: fixed;
   top: 0;
-  left: 0;
   z-index: 2;
   background-color: #fff;
-  box-shadow: 0 1px 4px rgba(146, 161, 176, 0.15);
+  box-shadow: 0 4px 8px rgba(146, 161, 176, 0.15);
+  margin-bottom: var(--mb-4);
 }
 
 /*--------- Navigation-------------- */
 .nav {
   height: var(--header-height);
   display: flex;
-  display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   font-weight: var(--font-weight);
   align-items: center;
 }
+
 @media screen and (max-width: 768px) {
+  body{
+    margin: 0;
+    display: grid;
+    place-items: center;
+  }
+  .header {
+    margin-bottom: var(--mb-6);
+  }
   .nav__menu {
     position: fixed;
     top: var(--header-height);
     right: -100%;
-    width: 80%;
-    height: 100%;
+    width: 50%;
+    height: 50%;
     padding: 2rem;
+    border-radius: 50% 0 50% 50%;
     background-color: var(--bg-color);
     transition: 0.5s ease;
+    text-align: center;
   }
+
 }
 .nav__item {
   margin-bottom: var(--mb-4);
@@ -154,13 +168,18 @@ section-title::after {
   position: absolute;
   content: '';
   width: 100%;
-  height: 0.18rem;
+  height: 0.2rem;
   left: 0;
   top: 2rem;
   background-color: var(--hover-color);
 }
-.nav__logo {
-  color: var(--dark-color);
+.nav__logo-link{
+  font-size: 2rem;
+  color: var(--accent-color);
+  
+}
+.nav__logo-link span{
+  color: #fc4cb5;
 }
 .nav__toggle {
   color: var(--dark-color);
@@ -173,7 +192,7 @@ section-title::after {
   position: absolute;
   content: '';
   width: 100%;
-  height: 0.18rem;
+  height: 0.2rem;
   left: 0;
   top: 2rem;
   background-color: var(--hover-color);
@@ -186,16 +205,16 @@ section-title::after {
 
 /*-------------Home----------*/
 .home {
-  height: calc(100vh-3rem);
   row-gap: 1rem;
   position: relative;
 }
-.home__data {
+ .home__data {
   align-self: center;
 }
+
 .home__title {
   font-size: var(--big-font-size);
-  margin-bottom: var(--mb-5);
+  margin-bottom: var(--mb-2);
 }
 .home__title-color {
   color: var(--accent-color);
@@ -203,6 +222,7 @@ section-title::after {
 .home__social {
   display: flex;
   flex-direction: column;
+  align-items: flex-end;
 }
 .home__social-icon {
   width: max-content;
@@ -213,22 +233,36 @@ section-title::after {
 .home__social-icon:hover {
   color: var(--accent-color);
 }
-.home__img {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  width: 295px;
+.home__img  {
+  margin-top: var(--mb-6);
+  width: 250px;
+  background-color: #33cc66;
+  border-radius:50%;
+} 
+.home__img:hover{
+
+padding: 1rem 1rem 0 1rem;
+border: none;
+transition: 2s ease;
 }
 .button {
+  width: 10rem;
   display: inline-block;
   background-color: var(--accent-color);
   color: white;
   padding: 0.75rem 2.5rem;
   font-weight: var(--font-weight);
   border-radius: 0.5rem;
+  margin-top:var(--mb-2);;
 }
 .button:hover {
+  background-color: #fc4cb5;
   box-shadow: 0 10px 36px rgba(0, 0, 0, 0.15);
+}
+.home__content{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 /*---------------ABOUT---------------*/
@@ -269,14 +303,14 @@ section-title::after {
   font-size: 2rem;
 }
 .skills__name {
-  margin-bottom: var(--font-weight);
+  margin-bottom:var(--mb-2);
   padding: 0.5rem 1rem;
   border-radius: 0.5rem;
-  background-color: #fc4cb5;
+  background-color: var(--accent-color);
   box-shadow: 0 10px 36px rgba(0, 0, 0, 0.15);
 }
 .skills__name:hover {
-  background-color: var(--accent-color);
+  background-color: #fc4cb5;
   color: white;
 }
 .skills__name span {
@@ -305,7 +339,176 @@ section-title::after {
   text-align: center;
 }
 .experience__data {
+  width: 100%;
   display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
   justify-content: space-between;
-  gap: 1rem;
+  align-items: center;
+  gap: 1.5rem;
+  padding: 2rem;
+
 }
+.project__name{
+  box-shadow: 0 4px 25px rgba(0, 0, 0, 0.15);
+  border-radius: 0.5rem;
+  padding: 1rem;
+  background-color: var(--accent-color);
+}
+.project__name h4{
+  background-color: #fc4cb5;
+  color: var(--light-color);
+  padding: 1rem;
+  border-radius: 0.5rem;
+  text-align: center;
+  width: 50%;
+  margin: 0 auto;
+  margin-bottom: var(--mb-2);
+}
+.project__name p{
+  width: 70%;
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: var(--mb-2);
+}
+.project__name a{
+  display: inline-block;
+  color:blue;
+  text-align: center;
+  width: 100%;
+  margin: 0 auto;
+  font-weight: 800;
+  cursor: pointer;
+}
+.project__name a:hover{
+  color: var(--hover-color);
+  transform: scale(1.2);
+}
+/*--------Education----------*/
+.education li strong{
+  color: var(--accent-color);
+}
+
+.education__list li{
+  font-weight: 600;
+}
+.education__list li:hover{
+ list-style: circle;
+color: var(--bg-color);
+  
+}
+/*--------Languages----------*/
+.languages{
+  row-gap: 2rem;
+  text-align: center;
+  margin-bottom: var(--mb-6);
+}
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+  background-color: #fc4cb5;
+
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+
+}
+
+tr:hover {
+  background-color: #dddddd;
+
+}
+
+/*--------Footer----------*/
+.footer{
+  background-color:#003366 ;
+  color: var(--light-color);
+  text-align: center;
+  padding: 2rem 0;
+}
+.footer__social{
+display: flex;
+justify-content: center;
+align-items: center;
+gap: 2rem;
+margin-bottom: var(--mb-3);
+}
+.footer span{
+  font-weight: var(--font-weight);
+  color: red;
+}
+hr{
+  width: 100%;
+  border: 1px dashed black;
+}
+
+/*--------MEDIA QUERIES----------*/
+
+@media screen and (min-width: 768px) {
+  body{
+    margin: 0;
+    display: grid;
+    place-items: center;
+  }
+  section{
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+  }
+  .section-title{
+    margin-bottom:var(--mb-6)
+  }
+  .section-title::after{
+    width: 80px;
+    top: 3rem;
+  }
+  .nav{
+    height: calc(var(--header-height) + 1rem);
+  }
+  .nav__item{
+    margin-left: var(--mb-6);
+    margin-bottom: 0;
+  }
+  .nav__list{
+    display: flex;
+    padding-top: 0;
+  }
+  .nav__link{
+    color: var(--dark-color);
+  }
+  .nav__toggle{
+    display: none;
+  }
+  .nav__logo-link {
+    color:var(--accent-color);
+    font-size: var(--h2-font-size);
+
+  }
+  .home{
+    height: 100vh;
+  }
+  .home__data{
+    align-items: flex-end;
+  }
+  .home__img{
+    width: 457px;
+  }
+  .about__container{
+    grid-template-columns: repeat(2,1fr);
+    align-items: center;
+    text-align: initial;
+  }
+  .about__img img{
+    width: 300px;
+  }
+}
+/* @media screen and (min-width: 1024px){
+  .bd-grid{
+    margin-left: auto;
+    margin-right: auto;
+  }
+} */
