--- a/style.css
+++ b/style.css
@@ -482,6 +482,9 @@ margin-bottom: var(--mb-3);
 background-color: #fc4cb5;
  }
 
+ .iconName{
+  display: none;
+ }
 /*--------MEDIA QUERIES----------*/
 
 @media screen and (min-width: 768px) {
